<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">SSTV Encoder</string>
    <string name="action_pick_picture">Pick Picture</string>
    <string name="action_take_picture">Take Picture</string>
    <string name="action_save_wave">Save as WAVE File</string>
    <string name="action_stop">Stop</string>
    <string name="action_play">Play</string>
    <string name="action_transform">Transform Image</string>
    <string name="action_rotate">Rotate</string>
    <string name="action_reset">Reset</string>
    <string name="action_done">Done</string>
    <string name="action_modes">Modes</string>
    <string name="action_martin1" translatable="false">Martin 1</string>
    <string name="action_martin2" translatable="false">Martin 2</string>
    <string name="action_pd50" translatable="false">PD 50</string>
    <string name="action_pd90" translatable="false">PD 90</string>
    <string name="action_pd120" translatable="false">PD 120</string>
    <string name="action_pd160" translatable="false">PD 160</string>
    <string name="action_pd180" translatable="false">PD 180</string>
    <string name="action_pd240" translatable="false">PD 240</string>
    <string name="action_pd290" translatable="false">PD 290</string>
    <string name="action_scottie1" translatable="false">Scottie 1</string>
    <string name="action_scottie2" translatable="false">Scottie 2</string>
    <string name="action_scottie_dx" translatable="false">Scottie DX</string>
    <string name="action_robot36" translatable="false">Robot 36</string>
    <string name="action_robot72" translatable="false">Robot 72</string>
    <string name="action_wraaseSC2_180" translatable="false">Wraase SC2 180</string>
    <string name="action_privacy_policy">Privacy Policy</string>
    <string name="action_privacy_policy_text">
        SSTV Encoder converts images to audio.
        \n\nTo convert the image, it will be loaded into temporary memory.
        \n\nThe loaded image can be scaled and rotated. Neither the modified image nor the modifications will be stored. The link to the last loaded image will be stored in the app settings locally.
        \n\nA text overlay can be added. It will be stored in the app settings locally.
        \n\nThe modified image with text overlays will be encoded to audio using the selected mode. The selected mode will be stored in the app settings locally.
        \n\nThe resulting audio can either be played back by pressing the play button or saved locally on the device by pressing the save button.
    </string>
    <string name="action_about">About SSTV Encoder</string>
    <string name="action_about_text">
        SSTV Encoder %1$s\nCopyright 2017 Olga Miller
        \n\nSSTV Encoder sends images via Slow Scan Television (SSTV).
        \n\nFor more info, see open source code: \nhttps://github.com/olgamiller/SSTVEncoder2
        \n\nDISCLAIMER:\nTHE SOFTWARE IS PROVIDED \"AS IS\" AND THE AUTHOR DISCLAIMS ALL WARRANTIES WITH REGARD TO THIS SOFTWARE INCLUDING ALL IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY SPECIAL, DIRECT, INDIRECT, OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS, WHETHER IN AN ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
    </string>
    <string name="load_img_err_title">Image loading error</string>
    <string name="load_img_orientation_err_title">Image orientation error</string>
    <string name="load_img_err_txt_unsupported">Unsupported content.</string>
    <string name="message_prev_img_not_loaded">Previous image could not be loaded.</string>
    <string name="message_no_camera">Device has no camera.</string>
    <string name="progressbar_message_sending">Sending…</string>
    <string name="progressbar_message_saving_to_file">%1$s saving…</string>
    <string name="another_activity_resolve_err">Another activity could not be resolved.</string>
    <string name="another_activity_start_err">Another activity could not be started.</string>
    <string name="btn_send_email">Send Email</string>
    <string name="btn_ok">OK</string>
    <string name="email_subject">SSTV Encoder - Bug Report</string>
    <string name="chooser_title">Send Bug Report:</string>
    <string name="bold">Bold</string>
    <string name="italic">Italic</string>
    <string name="outline">Outline</string>
    <string name="color">Color</string>
    <string name="outline_color">Color</string>
    <string name="size">Size</string>
    <string name="font">Font</string>
    <string name="font_default">Default</string>
    <string name="text">Text</string>
    <string name="font_size_small">Small</string>
    <string name="font_size_normal">Normal</string>
    <string name="font_size_large">Large</string>
    <string name="font_size_huge">Huge</string>
    <string name="outline_size">Size</string>
    <string name="outline_size_thin">Thin</string>
    <string name="outline_size_normal">Normal</string>
    <string name="outline_size_thick">Thick</string>
</resources>