<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditTextActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1,4">

        <TableRow>

            <TextView
                android:text="@string/text"/>

            <EditText
                android:id="@+id/edit_text"
                android:layout_span="4"
                android:imeOptions="actionDone|flagNoExtractUi"
                android:inputType="text"
                android:textSize="32sp"/>

        </TableRow>

        <TableRow>

            <TextView
                android:text="@string/font"/>

            <Spinner
                android:id="@+id/edit_font_family"
                android:layout_span="4"/>

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/text_italic"
                android:text="@string/italic"/>

            <CheckBox
                android:id="@+id/edit_italic"
                android:onClick="onItalicClick"
                android:text=""/>

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/text_bold"
                android:text="@string/bold"/>

            <CheckBox
                android:id="@+id/edit_bold"
                android:onClick="onBoldClick"
                android:text=""/>

            <CheckBox
                android:id="@+id/edit_outline"
                android:onClick="onOutlineClick"
                android:text=""/>

            <TextView
                android:id="@+id/text_outline"
                style="?android:attr/listSeparatorTextViewStyle"
                android:layout_span="2"
                android:clickable="true"
                android:onClick="onOutlineClick"
                android:text="@string/outline"/>

        </TableRow>

        <TableRow>

            <TextView
                android:text="@string/size"/>

            <Spinner
                android:id="@+id/edit_text_size"
                android:layout_width="50dp"/>

            <android.support.v4.widget.Space
                android:layout_width="0dp"/>

            <TextView
                android:id="@+id/text_outline_size"
                android:text="@string/size"/>

            <Spinner
                android:id="@+id/edit_outline_size"
                android:layout_width="50dp"/>

        </TableRow>

        <TableRow>

            <TextView
                android:text="@string/color"/>

            <LinearLayout
                android:clickable="true"
                android:onClick="onColorClick">

                <View
                    android:id="@+id/edit_color"
                    android:layout_width="24sp"
                    android:layout_height="24sp"
                    android:layout_margin="6sp"
                    android:background="@android:color/white"
                    android:clickable="true"
                    android:onClick="onColorClick"/>

            </LinearLayout>

            <android.support.v4.widget.Space
                android:layout_width="0dp"/>

            <TextView
                android:id="@+id/text_outline_color"
                android:text="@string/color"/>

            <LinearLayout
                android:clickable="true"
                android:onClick="onOutlineColorClick">

                <View
                    android:id="@+id/edit_outline_color"
                    android:layout_width="24sp"
                    android:layout_height="24sp"
                    android:layout_margin="6sp"
                    android:background="@android:color/white"
                    android:clickable="true"
                    android:onClick="onOutlineColorClick"/>

            </LinearLayout>

        </TableRow>

    </TableLayout>

</ScrollView>
